apps/cli/crates/onequery-cli/src/snapshots/onequery__cli__tests__query_help_output_snapshot_targets_query_surface.snap
---
source: crates/onequery-cli/src/cli/../cli_tests.rs
expression: "rendered_display(&[\"onequery\", \"query\", \"--help\"])"
---
Execute or validate source queries

Usage: onequery query [OPTIONS] <COMMAND>

Commands:
  exec      Execute a query and return rows
  validate  Validate a query without executing it
  help      Print this message or the help of the given subcommand(s)

Options:
  -h, --help     Print help
  -V, --version  Print version

Global Options:
      --org <ORG_SLUG>           Override the active org for this invocation
  -c, --config <KEY=VALUE>       Apply a raw config override for this invocation using `key=value`
      --request-id <REQUEST_ID>  Attach a caller-supplied request ID to outbound API requests
      --timeout <SECONDS>        Override the request timeout in seconds for this invocation
      --output <OUTPUT>          Choose text or JSON output [possible values: text, json]
      --verbose                  Emit workflow progress and retry tracing to stderr
