apps/cli/crates/onequery-cli/src/snapshots/onequery__cli__tests__source_connect_help_output_lists_supported_providers.snap
---
source: crates/onequery-cli/src/cli/../cli_tests.rs
expression: "rendered_display(&[\"onequery\", \"source\", \"connect\", \"--help\"])"
---
Show instructions or create a new source connection

Usage: onequery source connect [OPTIONS] --source <PROVIDER>

Options:
      --source <PROVIDER>  Select the provider to connect [possible values: postgres, supabase, mysql, mongodb, bigquery, laminar, aws_athena_connector, ga, amplitude, mixpanel, posthog, sentry, github, linear]
      --input <JSON>       Create one source from an inline JSON payload
  -h, --help               Print help
  -V, --version            Print version

Global Options:
      --org <ORG_SLUG>           Override the active org for this invocation
  -c, --config <KEY=VALUE>       Apply a raw config override for this invocation using `key=value`
      --request-id <REQUEST_ID>  Attach a caller-supplied request ID to outbound API requests
      --timeout <SECONDS>        Override the request timeout in seconds for this invocation
      --json                     Emit machine-readable JSON output
      --verbose                  Emit workflow progress and retry tracing to stderr
