apps/cli/crates/onequery-cli/src/snapshots/onequery__cli__tests__web_help_output_snapshot_targets_dashboard_surface.snap
---
source: crates/onequery-cli/src/cli/../cli_tests.rs
assertion_line: 132
expression: "rendered_display(&[\"onequery\", \"web\", \"--help\"])"
---
Open the OneQuery dashboard in browser

Usage: onequery web [OPTIONS]

Options:
  -h, --help     Print help
  -V, --version  Print version

Global Options:
      --org <ORG_SLUG>           Override the active org for this invocation
      --profile <PROFILE>        Select a local auth/config profile for this invocation
  -c, --config <KEY=VALUE>       Apply a raw config override for this invocation using `key=value`
      --request-id <REQUEST_ID>  Attach a caller-supplied request ID to outbound API requests
      --timeout <SECONDS>        Override the request timeout in seconds for this invocation
      --json                     Emit machine-readable JSON output
      --text                     Emit human-readable text output
      --verbose                  Emit workflow progress and retry tracing to stderr
